ingestor/redpanda-console/http-routes.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redpanda-console
  namespace: hzp-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared-gateway
      namespace: envoy-gateway-system
      sectionName: http-listener
  hostnames:
    - "redpanda-console.hzp.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: redpanda-console
          port: 8080
